Opened 17 years ago

Closed 17 years ago

Last modified 17 years ago

#1483 closed bug (fixed)

TTY driver doesn't handle all reads correctly.

Reported by: kaoutsis Owned by: bonefish
Priority: normal Milestone: R1
Component: - General Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The purpose was to read a whole line from the keyboard, using a test-app (attached read_from_stdin.cpp) I have test the test-app in both hrev5 and linux and the result is indeed what i expected: reading a line until enter is pressed. In haiku the behavior is that after reading a single byte, immediately returns. In other words, the test-app is reading only a character and returns. In blocking mode with canonical input processing enabled it should read full lines.

Attachments (1)

read_from_stdin.cpp (512 bytes ) - added by kaoutsis 17 years ago.
the source file for the test-app

Download all attachments as: .zip

Change History (3)

by kaoutsis, 17 years ago

Attachment: read_from_stdin.cpp added

the source file for the test-app

comment:1 by bonefish, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22357.

in reply to:  1 comment:2 by kaoutsis, 17 years ago

Replying to bonefish:

Fixed in hrev22357.

Also the rest of my tests are successful now. Thanks!

Note: See TracTickets for help on using tickets.