* When canonical input processing is enabled reads should only return   anything, if a line is available. Fixes bug #1483. * Replaced the request owner waiting semaphore by a condition variable   and removed the now no longer needed SemaphorePool.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22357 a95241bf-73f2-0310-859d-f6bbb57e9c96